# hw-12

./: CMakeLists.txt
files/: pirate.csv
inc/: PirateSpeak.h
src/: PirateSpeak.cpp
